--- a/publication.html
+++ b/publication.html
@@ -123,8 +123,7 @@
           Euler-Lagrange structure after of a collocated pre-feedback, submitted to <em>IEEE Trans. on Automatic Control</em>, 2021. (under review, <a href="https://arxiv.org/abs/2109.06724">arXiv: 2109.06724</a>)</li>
           <li>Lei Wang, Romeo Ortega, Alexey Bobtsov, Jose G. Romero and <u>Bowen Yi</u> Identiability implies robust, globally exponentially convergent on-line parameter estimation: Application to model reference adaptive control, submitted to <em>IEEE Trans. on Automatic Control</em>, 2021. (under review, <a href="https://arxiv.org/abs/2109.06724">arXiv: 2109.06724</a>)</li>
           <li>Fletcher Fan, <u>Bowen Yi</u>, David Rye, Guodong Shi and Ian R. Manchester, Learning stable Koopman embeddings, submitted to <em>American Control Conference</em>, 2022. (under review)</li>
-          <li>Jose G. Romero, Isaac Gandarilla, Victor Santibanez and<u> Bowen Yi</u>, A constructive procedure for orbital stabilization of a class of underactuated mechanical systems, submitted to <em>IEEE Trans. on Control Systems Technology</em>, 2021. (under review)</li>
-          <li>Xiaodong Shao, Qinglei Hu, Daochun Li, Yang Shi and <u>Bowen Yi</u>, Composite adaptive control for anti-unwindng attitude maneuvers: An exponential stability result without persistent excitation, submitted to <em>IEEE Trans. on Control Systems and Technology,</em> 2021. (under review, <a href="https://arxiv.org/abs/2108.09901">arXiv: 2108.09901</a>)</li>
+          <li>Xiaodong Shao, Qinglei Hu, Daochun Li, Yang Shi and <u>Bowen Yi</u>, Composite adaptive control for anti-unwindng attitude maneuvers: An exponential stability result without persistent excitation, submitted to <em>IEEE Trans. on Systems, Man and Cybernetics,</em> 2021. (under review, <a href="https://arxiv.org/abs/2108.09901">arXiv: 2108.09901</a>)</li>
         </ol>
         <h3>Journal papers (published or accepted)</h3>
         <ol>
@@ -171,12 +170,13 @@
             estimation of position in salient permanent magnet synchronous
             motors, <em>IET Power Electronics</em>, vol. 13(9), pp. 1865–1874,
           2020.</li>
+          <li>Jose G. Romero, Isaac Gandarilla, Victor Santibanez and<u> Bowen Yi</u>, A constructive procedure for orbital stabilization of a class of underactuated mechanical systems, <em>IEEE Trans. on Control Systems Technology</em>, 2022.</li>
           <li>Xiaodong Shao, Qinglei Hu, Yang Shi and <u>Bowen Yi</u>, Data-driven immersion and invariance adaptive
-          attitude control for rigid bodies with double-level state constraints, <em>IEEE Trans. on Control Systems Technology</em>, 2021. (online)</li>
+          attitude control for rigid bodies with double-level state constraints, <em>IEEE Trans. on Control Systems Technology</em>, 2021. </li>
           <li><u>Bowen Yi</u>, Romeo Ortega, Ian R. Manchester and Houria
             Siguerdidjane, Path following of a class of underactated mechanical
             systems via immersion and invariance-based orbital stabilization, <em>International
-          Journal of Robust and Nonlinear Control</em>, vol. 30, no. 18, pp. 8521-8544, 2020..</li>
+          Journal of Robust and Nonlinear Control</em>, vol. 30, no. 18, pp. 8521-8544, 2020.</li>
           <li>Jin Wu, Miaomiao Wang, Yi Jiang, <u>Bowen Yi</u>, Rui Fan and Ming Liu, Simultaneous Hand-Eye/Robot-World/Camera-IMU Calibration, <em>IEEE/AMSE Trans. on Mechatronics</em>, 2021. (online)</li>
           <li>Alexey Bobtsov, Romeo Ortega, <u>Bowen Yi</u>, and Nicolay Nicolaev,
             Adaptive state estimation of stateaffine systems with unknown
