--- a/index.html
+++ b/index.html
@@ -147,8 +147,9 @@ Camperdown, NSW 2006</p>
 
 <h3>Recent News</h3>
 	  <ul>
+      <li><strong>06 Feb 2022 </strong>Our paper, entitled Conditions for convergence of dynamic regressor extension and mixing parameter estimators using LTI filters, was accepted by <em>IEEE Trans. on Automatic Control</em>.</li>
+      <li><strong>01 Feb 2022 </strong>Our paper, entitled Learning stable Koopman embeddings, was accepted by <em>American Control Conference</em>.</li>
       <li><strong>27 Jan 2022 </strong>Our paper, entitled Generation of new exciting regressors for consistent on-line estimation of unknown parameters, has been conditionally accepted by <em>IEEE Trans. on Automatic Control</em>.</li>
-      <li><strong>19 Jan 2022 </strong>Our paper, entitled Conditions for convergence of dynamic regressor extension and mixing parameter estimators using LTI filters, has been conditionally accepted by <em>IEEE Trans. on Automatic Control</em>.</li>
       <li><strong>11 Jan 2022 </strong>Our paper, entitled A constructive procedure for orbital stabilization of a class of underactuated mechancial systems, has been accepted by <em>IEEE Trans. on Control Systems Technology</em>.</li>
       <li><strong>18 Sept 2021</strong> Our paper, entitled Reduced-order nonlinear observers via contraction analysis and convex optimization, has been accepted by<em> IEEE Trans. on Automatic Control</em> as a Full paper.</li>
       <li><strong>27 July 2021</strong> Our paper, entitled On the equivalence of contraction and Koopman approaches for nonlinear stability and control, has been accepted by the 60th <em>IEEE Conferece on Decision and Control</em>.</li>
