--- a/publication.html
+++ b/publication.html
@@ -121,8 +121,7 @@
           <li>Jose G. Romero and <u>Bowen Yi</u>*, Orbital stabilization of underactuated mechanical systems without
           Euler-Lagrange structure after of a collocated pre-feedback, submitted to <em>IEEE Trans. on Automatic Control</em>, 2021. (under review, <a href="https://arxiv.org/abs/2109.06724">arXiv: 2109.06724</a>)</li>
           <li>Lei Wang, Romeo Ortega, Alexey Bobtsov, Jose G. Romero and <u>Bowen Yi</u> Identiability implies robust, globally exponentially convergent on-line parameter estimation: Application to model reference adaptive control, submitted to <em>IEEE Trans. on Automatic Control</em>, 2021. (under review, <a href="https://arxiv.org/abs/2109.06724">arXiv: 2109.06724</a>)</li>
-          <li>Fletcher Fan, <u>Bowen Yi</u>, David Rye, Guodong Shi and Ian R. Manchester, Learning stable Koopman embeddings, submitted to <em>American Control Conference</em>, 2022. (under review)</li>
-          <li>Xiaodong Shao, Qinglei Hu, Daochun Li, Yang Shi and <u>Bowen Yi</u>, Composite adaptive control for anti-unwindng attitude maneuvers: An exponential stability result without persistent excitation, submitted to <em>IEEE Trans. on Systems, Man and Cybernetics,</em> 2021. (under review, <a href="https://arxiv.org/abs/2108.09901">arXiv: 2108.09901</a>)</li>
+          <li>Xiaodong Shao, Qinglei Hu, Daochun Li, Yang Shi and <u>Bowen Yi</u>, Composite adaptive control for anti-unwindng attitude maneuvers: An exponential stability result without persistent excitation, submitted to <em>IEEE Trans. on Aerospace and Electronic Systems,</em> 2021. (under review, <a href="https://arxiv.org/abs/2108.09901">arXiv: 2108.09901</a>)</li>
         </ol>
         <h3>Journal papers (published or accepted)</h3>
         <ol>
@@ -137,11 +136,9 @@
             Jongwon Choi, A globally exponentially stable position observer for
             interior permanent magnet synchronous motors, <em>Automatica</em>,
           vol. 125, 109424, pp. 1-10, 2021.</li>
-          <li><u>Bowen Yi</u>, Romeo Ortega and Weidong Zhang, On state observers for nonlinear systems: A new          design and a unifying framework, <em>IEEE Trans. on Automatic Control</em>, vol. 64, pp. 1193-1120, 2019.</li>
+          <li><u>Bowen Yi</u>, Romeo Ortega and Weidong Zhang, On state observers for nonlinear systems: A new design and a unifying framework, <em>IEEE Trans. on Automatic Control</em>, vol. 64, pp. 1193-1120, 2019.</li>
           <li><u>Bowen Yi</u>, and Romeo Ortega, Conditions for convergence of dynamics
-            extension and mixing parameter estimator using LTI filters,
-            submitted to <em>IEEE Trans. on Automatic Control</em>, 2022. (conditionally accepted, <a href="https://arxiv.org/abs/2007.15224">arXiv:
-              2007.15224</a>)</li>
+            extension and mixing parameter estimator using LTI filters, <em>IEEE Trans. on Automatic Control</em>, 2022. </li>
           <li>&nbsp;Alexey Bobtsov, <u>Bowen Yi*</u> , Romeo Ortega and Alessandro Astolfi, Generation of new exciting regressors for consistent on-line estimation of a scalar parameter, <em>IEEE Trans. on Automatic Control</em>, 2022. (conditionally accepted , arXiv: 2104.02210)</li>
 <li><u>Bowen Yi</u>, Romeo Ortega, Dongjun Wu, and Weidong Zhang, Orbital
             stablization of nonlinear systems via Mexican sombrero energy
@@ -197,6 +194,7 @@
         </ol>
         <h3>Conference papers</h3>
         <ol>
+          <li>Fletcher Fan, <u>Bowen Yi</u>, David Rye, Guodong Shi and Ian R. Manchester, Learning stable Koopman embeddings, <em>American Control Conference</em>, Atlanta, GA, USA, 2022. </li>
           <li><u>Bowen Yi</u>, Chi Jin, Lei Wang, Guodong Shi, and Ian R. Manchester, A globally convergent observer for visual localization without persisent excitation, Austin, Texas, USA, <em>IEEE Conference on Decision and Control</em>, 2021.</li>
           <li><u>Bowen Yi</u>, and Ian R. Manchester, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, Austin, Texas, USA, <em>IEEE Conference on Decision and Control</em>, 2021. </li>
           <li><u>Bowen Yi</u>, Ruigang Wang, and Ian R. Manchester, Reduced-order
