--- a/publication.html
+++ b/publication.html
@@ -117,80 +117,32 @@
         <ol>
           <li><u>Bowen Yi</u>, and Ian R. Manchester, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, submitted to <em>IEEE Trans. on Automatic Control</em>, 2021. (under review, <a href="https://arxiv.org/abs/2103.15033">arXiv: 2103.15033</a>)</li>
           <li><u>Bowen Yi</u>, Chi Jin, and Ian R. Manchester, Globally convergent visual-feature range estimation with biased inertial measurements, submitted to <em>Automatica</em>, 2021. (under review)</li>
-
-          <li>Jose G. Romero and <u>Bowen Yi</u>*, Orbital stabilization of underactuated mechanical systems without
-          Euler-Lagrange structure after of a collocated pre-feedback, submitted to <em>IEEE Trans. on Automatic Control</em>, 2021. (under review, <a href="https://arxiv.org/abs/2109.06724">arXiv: 2109.06724</a>)</li>
+          <li>Jose G. Romero and <u>Bowen Yi</u>*, Orbital stabilization of underactuated mechanical systems without Euler-Lagrange structure after of a collocated pre-feedback, submitted to <em>IEEE Trans. on Automatic Control</em>, 2021. (under review, <a href="https://arxiv.org/abs/2109.06724">arXiv: 2109.06724</a>)</li>
           <li>Lei Wang, Romeo Ortega, Alexey Bobtsov, Jose G. Romero and <u>Bowen Yi</u> Identiability implies robust, globally exponentially convergent on-line parameter estimation: Application to model reference adaptive control, submitted to <em>IEEE Trans. on Automatic Control</em>, 2021. (under review, <a href="https://arxiv.org/abs/2109.06724">arXiv: 2109.06724</a>)</li>
           <li>Xiaodong Shao, Qinglei Hu, Daochun Li, Yang Shi and <u>Bowen Yi</u>, Composite adaptive control for anti-unwindng attitude maneuvers: An exponential stability result without persistent excitation, submitted to <em>IEEE Trans. on Aerospace and Electronic Systems,</em> 2021. (under review, <a href="https://arxiv.org/abs/2108.09901">arXiv: 2108.09901</a>)</li>
         </ol>
         <h3>Journal papers (published or accepted)</h3>
         <ol>
-          <li>Romeo Ortega, Laurent Praly, Stanislav Aranovskiy, <u>Bowen Yi</u> and
-            Weidong Zhang, On dynamic regressor extension and mixing parameter
-            estimators: Two Luenberger observers interpretations,<em> Automatica</em>,
-          vol. 95, pp. 348–351, 2018. </li>
-          <li><u>Bowen Yi</u>, Ruigang Wang and Ian R. Manchester, Reduced-order
-            nonlinear observers via contraction analysis and convex
-            optimization,  <em>IEEE Trans. on Automatic Control</em>, pp. 1-16, August 2022, to appear.</li>
-          <li>Romeo Ortega, <u>Bowen Yi</u>*, Slobodan N. Vukosavic, Kwanghee Nam and
-            Jongwon Choi, A globally exponentially stable position observer for
-            interior permanent magnet synchronous motors, <em>Automatica</em>,
-          vol. 125, 109424, pp. 1-10, 2021.</li>
+          <li>Romeo Ortega, Laurent Praly, Stanislav Aranovskiy, <u>Bowen Yi</u> and Weidong Zhang, On dynamic regressor extension and mixing parameter estimators: Two Luenberger observers interpretations,<em> Automatica</em>, vol. 95, pp. 348–351, 2018. </li>
+          <li><u>Bowen Yi</u>, Ruigang Wang and Ian R. Manchester, Reduced-order nonlinear observers via contraction analysis and convex optimization,  <em>IEEE Trans. on Automatic Control</em>, pp. 1-16, vol. 67, issue 8, August 2022.</li>
+          <li>Romeo Ortega, <u>Bowen Yi</u>*, Slobodan N. Vukosavic, Kwanghee Nam and Jongwon Choi, A globally exponentially stable position observer for interior permanent magnet synchronous motors, <em>Automatica</em>, vol. 125, 109424, pp. 1-10, 2021.</li>
           <li><u>Bowen Yi</u>, Romeo Ortega and Weidong Zhang, On state observers for nonlinear systems: A new design and a unifying framework, <em>IEEE Trans. on Automatic Control</em>, vol. 64, pp. 1193-1120, 2019.</li>
-          <li><u>Bowen Yi</u>, and Romeo Ortega, Conditions for convergence of dynamics
-            extension and mixing parameter estimator using LTI filters, <em>IEEE Trans. on Automatic Control</em>, 2022. </li>
-          <li>&nbsp;Alexey Bobtsov, <u>Bowen Yi*</u> , Romeo Ortega and Alessandro Astolfi, Generation of new exciting regressors for consistent on-line estimation of a scalar parameter, <em>IEEE Trans. on Automatic Control</em>, 2022. (conditionally accepted , arXiv: 2104.02210)</li>
-<li><u>Bowen Yi</u>, Romeo Ortega, Dongjun Wu, and Weidong Zhang, Orbital
-            stablization of nonlinear systems via Mexican sombrero energy
-            shaping and pumping-and-damping injection, <em>Automatica, </em>vol.
-          112, 108661, pp. 1-9, 2020.</li>
-          <li><u>Bowen Yi</u>, Romeo Ortega and Weidong Zhang, Relaxing the conditions
-            for parameter estimationbased observers of nonlinear systems via
-            signal injection, <em>Systems &amp; Control Letters</em>, vol. 111,
-          pp. 18–26, 2018. </li>
-          <li>Romeo Ortega, <u>Bowen Yi</u>*, Jose Guadalupe Romero and Alessandro
-            Astolfi, Orbital stabilization of nonlinear systems via the
-            immersion and invariance technique, <em>International Journal of
-              Robust and Nonlinear Control</em>, vol. 30, issue 5, pp.
-          1850–1871, 2020.</li>
-          <li><u>Bowen Yi</u>, Romeo Ortega, Houria Siguerdidjane, Juan E. Machado and
-            Weidong Zhang, On generation of virtual outputs via signal
-            injection: Application to observer design for electromechanical
-            systems, <em>European Journal of Control</em>, vol. 54, pp.
-          129–139, 2020.</li>
-          <li><u>Bowen Yi</u>, Romeo Ortega, and Weidong Zhang, Smooth, time-variant
-            regulation of nonholonomic systems via energy pumping-and-damping, <em>International
-              Journal of Robust and Nonlinear Control</em>, vol. 30, issue 16,
-          pp. 6399–6413, 2020.</li>
-          <li><u>Bowen Yi</u>, Slobodan N. Vukosavic, Romeo Ortega, Aleksandar M.
-            Stankovic and Weidong Zhang, A new signal injection-based method for
-            estimation of position in salient permanent magnet synchronous
-            motors, <em>IET Power Electronics</em>, vol. 13(9), pp. 1865–1874,
-          2020.</li>
+          <li><u>Bowen Yi</u>, and Romeo Ortega, Conditions for convergence of dynamics extension and mixing parameter estimator using LTI filters, <em>IEEE Trans. on Automatic Control</em>, vol. 68, no. 2, pp. 1-6, Feb. 2023. </li>
+          <li>Alexey Bobtsov, <u>Bowen Yi*</u> , Romeo Ortega and Alessandro Astolfi, Generation of new exciting regressors for consistent on-line estimation of a scalar parameter, <em>IEEE Trans. on Automatic Control</em>, pp. 1-8, Sept. 2022.</li>
+          <li><u>Bowen Yi</u>, Romeo Ortega, Dongjun Wu, and Weidong Zhang, Orbital stablization of nonlinear systems via Mexican sombrero energy shaping and pumping-and-damping injection, <em>Automatica, </em>vol. 112, 108661, pp. 1-9, 2020.</li>
+          <li><u>Bowen Yi</u>, Romeo Ortega and Weidong Zhang, Relaxing the conditions for parameter estimationbased observers of nonlinear systems via signal injection, <em>Systems &amp; Control Letters</em>, vol. 111, pp. 18–26, 2018. </li>
+          <li>Romeo Ortega, <u>Bowen Yi</u> and Jose Guadalupe Romero, Robustification of nonlinear control systems <em>vis-à-vis</em> actuator dynamics: An immersion and invariance approach, <em>Systems &amp; Control Letters</em>, vol. 146, 104811, pp. 1{9, 2020.</li>
           <li>Jose G. Romero, Isaac Gandarilla, Victor Santibanez and<u> Bowen Yi</u>, A constructive procedure for orbital stabilization of a class of underactuated mechanical systems, <em>IEEE Trans. on Control Systems Technology</em>, 2022.</li>
-          <li>Xiaodong Shao, Qinglei Hu, Yang Shi and <u>Bowen Yi</u>, Data-driven immersion and invariance adaptive
-          attitude control for rigid bodies with double-level state constraints, <em>IEEE Trans. on Control Systems Technology</em>, 2021. </li>
-          <li><u>Bowen Yi</u>, Romeo Ortega, Ian R. Manchester and Houria
-            Siguerdidjane, Path following of a class of underactated mechanical
-            systems via immersion and invariance-based orbital stabilization, <em>International
-          Journal of Robust and Nonlinear Control</em>, vol. 30, no. 18, pp. 8521-8544, 2020.</li>
+          <li>Xiaodong Shao, Qinglei Hu, Yang Shi and <u>Bowen Yi</u>, Data-driven immersion and invariance adaptive attitude control for rigid bodies with double-level state constraints, <em>IEEE Trans. on Control Systems Technology</em>, 2021. </li>
+          <li>Romeo Ortega, <u>Bowen Yi</u>*, Jose Guadalupe Romero and Alessandro Astolfi, Orbital stabilization of nonlinear systems via the immersion and invariance technique, <em>International Journal of Robust and Nonlinear Control</em>, vol. 30, issue 5, pp. 1850–1871, 2020.</li>
+          <li><u>Bowen Yi</u>, Romeo Ortega, and Weidong Zhang, Smooth, time-variant regulation of nonholonomic systems via energy pumping-and-damping, <em>International Journal of Robust and Nonlinear Control</em>, vol. 30, issue 16, pp. 6399–6413, 2020.</li>
+          <li><u>Bowen Yi</u>, Romeo Ortega, Ian R. Manchester and Houria Siguerdidjane, Path following of a class of underactated mechanical systems via immersion and invariance-based orbital stabilization, <em>International Journal of Robust and Nonlinear Control</em>, vol. 30, no. 18, pp. 8521-8544, 2020.</li>
+          <li><u>Bowen Yi</u>, Romeo Ortega, Houria Siguerdidjane, Juan E. Machado and Weidong Zhang, On generation of virtual outputs via signal injection: Application to observer design for electromechanical systems, <em>European Journal of Control</em>, vol. 54, pp. 129–139, 2020.</li>
+          <li><u>Bowen Yi</u>, Slobodan N. Vukosavic, Romeo Ortega, Aleksandar M. Stankovic and Weidong Zhang, A new signal injection-based method for estimation of position in salient permanent magnet synchronous motors, <em>IET Power Electronics</em>, vol. 13(9), pp. 1865–1874, 2020.</li>
           <li>Jin Wu, Miaomiao Wang, Yi Jiang, <u>Bowen Yi</u>, Rui Fan and Ming Liu, Simultaneous Hand-Eye/Robot-World/Camera-IMU Calibration, <em>IEEE/AMSE Trans. on Mechatronics</em>, 2021. (online)</li>
-          <li>Alexey Bobtsov, Romeo Ortega, <u>Bowen Yi</u>, and Nicolay Nicolaev,
-            Adaptive state estimation of stateaffine systems with unknown
-            time-varying parameters, <em>International Journal of
-              Control</em>, 2021. (online)</li>
-          <li>Romeo Ortega, <u>Bowen Yi</u> and Jose Guadalupe Romero, Robustification
-            of nonlinear control systems <em>vis-à-vis</em> actuator dynamics:
-            An immersion and invariance approach, <em>Systems &amp; Control
-              Letters</em>, vol. 146, 104811, pp. 1{9, 2020.</li>
-          <li>Lei Qiao, <u>Bowen Yi</u>, Defeng Wu and Weidong Zhang, Design of three
-            exponentially convergent robust controllers for the trajectory
-            tracking of autonomous underwater vehicles, <em>Ocean Engineering</em>,
-            vol. 134, pp. 157–172, 2017.</li>
-          <li><u>Bowen Yi</u>, Lei Qiao and Weidong Zhang, Two-time scale path
-            following of underactuated marine surface vessels: design and
-            stability analysis using singular perturbation methods, <em>Ocean
-              Engineering</em>, vol.124, pp.287–297, 2016.</li>
+          <li>Alexey Bobtsov, Romeo Ortega, <u>Bowen Yi</u>, and Nicolay Nicolaev, Adaptive state estimation of stateaffine systems with unknown time-varying parameters, <em>International Journal of Control</em>, 2021. (online)</li>
+          <li>Lei Qiao, <u>Bowen Yi</u>, Defeng Wu and Weidong Zhang, Design of three exponentially convergent robust controllers for the trajectory tracking of autonomous underwater vehicles, <em>Ocean Engineering</em>, vol. 134, pp. 157–172, 2017.</li>
+          <li><u>Bowen Yi</u>, Lei Qiao and Weidong Zhang, Two-time scale path following of underactuated marine surface vessels: design and stability analysis using singular perturbation methods, <em>Ocean Engineering</em>, vol.124, pp.287–297, 2016.</li>
         </ol>
         <h3>Conference papers</h3>
         <ol>
