--- a/publication.html
+++ b/publication.html
@@ -115,6 +115,7 @@
               class="octicon octicon-link"></span></a> Selected Pulications</h2>
         <h3>Preprints and submissions</h3>
         <ol>
+          <li><u>Bowen Yi</u>, Lei Wang and Ian R. Manchester, Attitude estimation from vector measurements: Necessary and sufficient conditions and convergent observer design, submitted to IFAC NOLCOS and <em>IEEE Trans. on Automatic Control</em>, 2022. (under review)</li>
           <li><u>Bowen Yi</u>, and Ian R. Manchester, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, submitted to <em>IEEE Trans. on Automatic Control</em>, 2021. (under review, <a href="https://arxiv.org/abs/2103.15033">arXiv: 2103.15033</a>)</li>
           <li><u>Bowen Yi</u>, Chi Jin, and Ian R. Manchester, Globally convergent visual-feature range estimation with biased inertial measurements, submitted to <em>Automatica</em>, 2021. (under review)</li>
           <li>Jose G. Romero and <u>Bowen Yi</u>*, Orbital stabilization of underactuated mechanical systems without Euler-Lagrange structure after of a collocated pre-feedback, submitted to <em>IEEE Trans. on Automatic Control</em>, 2021. (under review, <a href="https://arxiv.org/abs/2109.06724">arXiv: 2109.06724</a>)</li>
