--- a/index.html
+++ b/index.html
@@ -147,6 +147,8 @@ Camperdown, NSW 2006</p>
 
 <h3>Recent News</h3>
 	  <ul>
+      <li><strong>06 Aug 2022</strong> Our paper, entitled Globally convergent visual-feature range estimation with biased inertial measurements, has been accepted to <em>Automatica</em>.</li>
+      <li><strong>24 July 2022</strong> The paper, entitiled Composite adaptive control for anti-unwinding attitude maneuvers: An exponential stability result without persistent excitation collaborating with <a href="https://www.researchgate.net/profile/Xiaodong-Shao">Dr. Xiaodong Shao</a>, was accepted by <em>IEEE Trans. on Aerospace and Electronic Systems.</em></li>
       <li><strong>10 March 2022 </strong>Our paper, entitled Generation of new exciting regressors for consistent on-line estimation of unknown parameters, was accepted by <em>IEEE Trans. on Automatic Control</em>.</li>
       <li><strong>06 Feb 2022 </strong>Our paper, entitled Conditions for convergence of dynamic regressor extension and mixing parameter estimators using LTI filters, was accepted by <em>IEEE Trans. on Automatic Control</em>.</li>
       <li><strong>01 Feb 2022 </strong>Our paper, entitled Learning stable Koopman embeddings, was accepted by <em>American Control Conference</em>.</li>
