--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
   <div class="wrapper">
     <header>
         <h1>Bowen Yi</h1>
-        <p>Postdoc Research Associate<br>
-        The University of Sydney</p>
+      <p>Postdoctoral Research Fellow<br>
+        The University of Technology Sydney</p>
         <p>Research Affiliate<br>
-        <a href="https://www.sydney.edu.au/engineering/our-research/robotics-and-intelligent-systems/australian-centre-for-field-robotics.html">Australian Centre for Field Robotics</a> (ACFR)</p>
+        <a href="https://www.uts.edu.au/research/robotics-institute">Robotics Institute</a><a href="https://www.sydney.edu.au/engineering/our-research/robotics-and-intelligent-systems/australian-centre-for-field-robotics.html"></a></p>
     <h3><a href="https://bwyi.github.io/">Home</a></h3>
         <h3><a href="research.html">Research</a> </h3>
         <h3><a href="publication.html">Publications</a></h3>
@@ -127,9 +127,9 @@
           <br>
         </div>
         <p><b>Contact:</b><br>
-Rose Street Building J04<br>
-The University of Sydney<br>
-Camperdown, NSW 2006</p>
+Room 301, Level 9, Building 11<br>
+The University of Technolgy Sydney<br>
+Ultimo, NSW 2008</p>
         <p>Tel: +61 04 6761 1727</p>
         <p>&nbsp;</p>
       <p>&nbsp;</p>
@@ -137,9 +137,8 @@ Camperdown, NSW 2006</p>
       <section>
 
       <img src="Bowen Yi.jpg" height="256" width="193" alt="Tyler Ransom"></h3>
-      <p>I am currently a postdoc research associate of <a href="https://www.sydney.edu.au/engineering/our-research/robotics-and-intelligent-systems/australian-centre-for-field-robotics.html">Australian Centre for Field Robotics</a> (ACFR) at the <a href="https://www.sydney.edu.au/">University of Sydney</a>. I obtained my Ph.D. degree in Systems and Control from <a href="https://www.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, China in 2019. Before that, I was a visiting student at  <a href="https://www.l2s.centralesupelec.fr/">Laboratoire des Signaux et Systèmes</a>, <a href="http://www.cnrs.fr/">CNRS</a>-<a href="https://www.centralesupelec.fr/">CentraleSupélec</a>, France from Oct 2017 to Apr 2019.      </p>
-      <p>My research interests include nonlinear and adaptive control, observer design, system identification, with special emphasis on applications to robotics.</p>
-      <p>Dr. Yi received the IEEE Conference on Control Technology and Applications (CCTA) <a href="http://ieeecss.org/awards/conference-control-technology-and-applications-best-student-paper-award">Best Student Paper Award</a> from IEEE Control Systems Society for his work on sensorless observer design for IPMSMs in 2019.      </p>
+      <p>I am currently a Postdoctoral Research Fellow in <a href="https://www.uts.edu.au/research/robotics-institute">Robotics Institute</a> at the University of Technology Sydney in the research group led by <a href="https://profiles.uts.edu.au/Dikai.Liu">Dikai Liu</a>. Prior to this, I was a Postdoctoral Research Associate in <a href="https://www.sydney.edu.au/engineering/our-research/robotics-and-intelligent-systems/australian-centre-for-field-robotics.html">Australian Centre for Field Robotics</a> (ACFR) at the <a href="https://www.sydney.edu.au/">University of Sydney</a>, hosted by <a href="https://www.sydney.edu.au/engineering/about/our-people/academic-staff/ian-manchester.html">Ian Manchester </a>working on the ARC Discovery Project ``Robust learning of dynamic systems'' from September 2019 to September 2022. I obtained my Ph.D. degree in Control Engineering from <a href="https://www.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, China in 2019 under the supervision of <a href="https://ipac.sjtu.edu.cn/">Weidong Zhang</a>. During which, I was a visiting student at <a href="https://www.l2s.centralesupelec.fr/">Laboratoire des Signaux et Systèmes</a> (L2S), <a href="http://www.cnrs.fr/">CNRS</a>-<a href="https://www.centralesupelec.fr/">CentraleSupélec</a>, France from October 2017 to April 2019, as a member of <a href="https://scholar.google.nl/citations?user=1jf5n5wAAAAJ&hl=en">Romeo Ortega</a>'s group.</p>
+      <p>My research interests include nonlinear and adaptive control, observer design, system identification, with special emphasis on applications to robotics. Dr. Yi received the IEEE CCTA <a href="http://ieeecss.org/awards/conference-control-technology-and-applications-best-student-paper-award">Best Student Paper Award</a> from IEEE Control Systems Society for his work on sensorless observer design for IPMSMs in 2019.      </p>
       <h2>&nbsp;</h2>
 
 
