--- a/publication.html
+++ b/publication.html
@@ -115,10 +115,11 @@
               class="octicon octicon-link"></span></a> Selected Pulications</h2>
         <h3>Preprints and submissions</h3>
         <ol>
+          <li><u>Bowen Yi</u>, Romeo Ortega, Jongwon Choi and Kwanghee Nam, A high performance globally exponentially stable sensorless observer for the IPMSM: Theoretical and experimental results, submitted to <em>Automatica</em>, 2022. (under review)</li>
           <li><u>Bowen Yi</u>, Lei Wang and Ian R. Manchester, Attitude estimation from vector measurements: Necessary and sufficient conditions and convergent observer design, submitted to IFAC NOLCOS and <em>IEEE Trans. on Automatic Control</em>, 2022. (under review)</li>
           <li><u>Bowen Yi</u>, and Ian R. Manchester, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, submitted to <em>IEEE Trans. on Automatic Control</em>, 2021. (under review, <a href="https://arxiv.org/abs/2103.15033">arXiv: 2103.15033</a>)</li>
           <li>Jose G. Romero and <u>Bowen Yi</u>*, Orbital stabilization of underactuated mechanical systems without Euler-Lagrange structure after of a collocated pre-feedback, submitted to <em>IEEE Trans. on Automatic Control</em>, 2021. (under review, <a href="https://arxiv.org/abs/2109.06724">arXiv: 2109.06724</a>)</li>
-          <li>Lei Wang, Romeo Ortega, Alexey Bobtsov, Jose G. Romero and <u>Bowen Yi</u> Identiability implies robust, globally exponentially convergent on-line parameter estimation: Application to model reference adaptive control, submitted to <em>IEEE Trans. on Automatic Control</em>, 2021. (under review, <a href="https://arxiv.org/abs/2109.06724">arXiv: 2109.06724</a>)</li>
+          <li>Lei Wang, Romeo Ortega, Alexey Bobtsov, Jose G. Romero and <u>Bowen Yi</u> Identiability implies robust, globally exponentially convergent on-line parameter estimation: Application to model reference adaptive control, ArXiv Preprint</li>
         </ol>
         <h3>Journal papers (published or accepted)</h3>
         <ol>
