--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@ Ultimo, NSW 2008</p>
 
 <h3>Recent News</h3>
 	  <ul>
+      <li><strong>12 Dec 2022</strong> Our paper, entitled On the equivalence of contraction and Koopman approaches for nonlinear stability and control, has been accepted to <em>IEEE Trans. on Automatic Control</em> as a Full Paper.</li>
       <li><strong>06 Aug 2022</strong> Our paper, entitled Globally convergent visual-feature range estimation with biased inertial measurements, has been accepted to <em>Automatica</em>.</li>
       <li><strong>24 July 2022</strong> The paper, entitiled Composite adaptive control for anti-unwinding attitude maneuvers: An exponential stability result without persistent excitation collaborating with <a href="https://www.researchgate.net/profile/Xiaodong-Shao">Dr. Xiaodong Shao</a>, was accepted by <em>IEEE Trans. on Aerospace and Electronic Systems.</em></li>
       <li><strong>10 March 2022 </strong>Our paper, entitled Generation of new exciting regressors for consistent on-line estimation of unknown parameters, was accepted by <em>IEEE Trans. on Automatic Control</em>.</li>
