--- a/publication.html
+++ b/publication.html
@@ -115,6 +115,8 @@
               class="octicon octicon-link"></span></a> Selected Pulications</h2>
         <h3>Preprints and submissions</h3>
         <ol>
+          <li><u>Bowen Yi</u>, Yeman Fan, Dikai Liu and Jose G. Romero, Simultaneous position-and-stiffness control of underactuated antagonistic tendon-driven continuum robots, submitted to <em>IEEE Trans. on Robotics</em>, 2023. (under review)</li>
+          <li>Dongjun Wu, <u>Bowen Yi</u> and Anders Rantzer, Stability analysis of trajectories on manifolds with applications to observer and controller design, submitted to <em>IEEE Trans. on Automatic Control</em>, 2023. (under review)</li>
           <li><u>Bowen Yi</u>, Romeo Ortega, Jongwon Choi and Kwanghee Nam, A high performance globally exponentially stable sensorless observer for the IPMSM: Theoretical and experimental results, submitted to <em>Automatica</em>, 2022. (under review)</li>
           <li>Jose G. Romero and <u>Bowen Yi</u>*, Orbital stabilization of underactuated mechanical systems without Euler-Lagrange structure after of a collocated pre-feedback, submitted to <em>Int. J. Robust Nonlinear Control</em>, 2023. (under review, <a href="https://arxiv.org/abs/2109.06724">arXiv: 2109.06724</a>)</li>
           <li>Lei Wang, Romeo Ortega, Alexey Bobtsov, Jose G. Romero and <u>Bowen Yi</u> Identiability implies robust, globally exponentially convergent on-line parameter estimation: Application to model reference adaptive control, ArXiv Preprint</li>
