--- a/services.html
+++ b/services.html
@@ -2,6 +2,28 @@
 <!doctype html>
 <html lang="en">
   <head>
+<style>
+@font-face {
+  font-family: 'CMU Sans Serif';
+  src: url('fonts/CMUSansSerif-Regular.ttf') format('truetype');
+  /* Add other font formats (e.g., woff, woff2) for better browser support */
+}
+
+/* Apply the CMU Sans Serif font to elements with the class "cmu-sans-serif" */
+.cmu-sans-serif {
+  font-family: 'CMU Sans Serif', sans-serif;
+}
+  </style>
+    <style>
+    .justified-text {
+      text-align: justify;
+    }
+  </style>
+  <style>
+    .gray-line {
+      border-top: 1px solid #ccc;
+    }
+  </style>
   <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -87,21 +109,26 @@
     </style>
   </head>
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Bowen Yi</h1>
-        <p>Postdoc Research Associate<br>
-          The University of Sydney</p>
-        <p>Research Affiliate<br>
-          <a href="https://www.sydney.edu.au/engineering/our-research/robotics-and-intelligent-systems/australian-centre-for-field-robotics.html">Australian Centre for Field Robotics</a> (ACFR)</p>
+
+
+
+<div class="wrapper">
+<header>
+<h1>Bowen Yi</h1>
+衣博文 <br><br>
+      <p>Postdoctoral Research Fellow<br>
+      <a href="https://www.uts.edu.au/research/robotics-institute">Robotics Institute</a>
+       <br> 
+       University of Technology Sydney</p>
+        
     <h3><a href="https://bwyi.github.io/">Home</a></h3>
-    <h3><a href="research.html">Research</a></h3>
-    <h3><a href="publication.html">Publications</a></h3>
-    <h3><a href="services.html">Services</a></h3>
-    <h3><a href="slides.html">Slides</a></h3>
-    <h3><a href="others.html">Others</a></h3>
+        <h3><a href="research.html">Research</a> </h3>
+        <h3><a href="publication.html">Publications</a></h3>
+        <h3><a href="services.html">Services</a></h3>
+<h3><a href="slides.html">Slides</a></h3>
+<h3><a href="others.html">Others</a></h3><div class="social-row3">
 <b>Social</b><br>
-        <div class="social-row">
+      <div class="social-row">
           <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i><span class="social-row1"><a href="mailto:B.YI@outlook.com" class="author-social" target="_blank">Email</a><br>
           <a href="https://scholar.google.com/citations?user=hyLNHhsAAAAJ&hl=en&oi=ao" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i></a><a href="https://orcid.org/0000-0002-0517-9519">ORCID</a><br>
           <a href="https://orcid.org/0000-0002-0517-9519"><i class="ai ai-fw ai-orcid-square"></i></a><a href="https://scholar.google.com/citations?user=hyLNHhsAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a><br>
@@ -111,14 +138,20 @@
           <br>
         </div>
         <p><b>Contact:</b><br>
-      Rose Street Building J04<br>
-      The University of Sydney<br>
-      Camperdown, NSW 2006</p>
-    <p>Tel: +61 04 6761 1727</p>
-      </header>
-      <section>
+Room 301, Level 9, Building 11<br>
+University of Technolgy Sydney<br>
+Ultimo, NSW 2007</p>
+<p>Tel: +61 04 6761 1727</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+</header>
+<section>
 
-        <h2>Professional Services</h2>
+
+
+
+     <h2><span class="cmu-sans-serif" style="color: darkblue;">Professional Services   <div class="gray-line"></div> </span></h2>  
+
         <p class="social-row2">- Teaching:</p>
         <ul>
           <li>Tutor (for Lab/Tutorial)
