--- a/services.html
+++ b/services.html
@@ -125,8 +125,8 @@
         <h3><a href="research.html">Research</a> </h3>
         <h3><a href="publication.html">Publications</a></h3>
         <h3><a href="services.html">Services</a></h3>
-<h3><a href="slides.html">Slides</a></h3>
-<h3><a href="others.html">Others</a></h3><div class="social-row3">
+
+<div class="social-row3">
 <b>Social</b><br>
       <div class="social-row">
           <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i><span class="social-row1"><a href="mailto:B.YI@outlook.com" class="author-social" target="_blank">Email</a><br>
