--- a/publication.html
+++ b/publication.html
@@ -143,7 +143,6 @@ Ultimo, NSW 2007</p>
           <li>Dongjun Wu, <u>Bowen Yi</u> and Anders Rantzer, Stability analysis of trajectories on manifolds with applications to observer and controller design, submitted to <em>IEEE Trans. Autom. Control</em>, 2023. (under review)</li>
           <li><u>Bowen Yi</u>, Romeo Ortega, Jongwon Choi and Kwanghee Nam, A high performance globally exponentially stable sensorless observer for the IPMSM: Theoretical and experimental results, submitted to <em>Automatica</em>, 2022. (under review)</li>
           <li>Jose G. Romero and <u>Bowen Yi</u>*, Orbital stabilization of underactuated mechanical systems without Euler-Lagrange structure after of a collocated pre-feedback, submitted to <em>Int. J. Robust Nonlinear Control</em>, 2023. (under review, <a href="https://arxiv.org/abs/2109.06724">arXiv: 2109.06724</a>)</li>
-          <li>Lei Wang, Romeo Ortega, Alexey Bobtsov, Jose G. Romero and <u>Bowen Yi</u> Identiability implies robust, globally exponentially convergent on-line parameter estimation: Application to model reference adaptive control, ArXiv Preprint, 2021.</li>
         </ol>
         </div>
         
@@ -171,6 +170,7 @@ Ultimo, NSW 2007</p>
           <li><u>Bowen Yi</u>, Romeo Ortega, Ian R. Manchester and Houria Siguerdidjane, Path following of a class of underactated mechanical systems via immersion and invariance-based orbital stabilization, <em>Int. J. Robust Nonlinear Control</em>, vol. 30, no. 18, pp. 8521-8544, 2020.</li>
           <li><u>Bowen Yi</u>, Romeo Ortega, Houria Siguerdidjane, Juan E. Machado and Weidong Zhang, On generation of virtual outputs via signal injection: Application to observer design for electromechanical systems, <em>Eur. J. Control</em>, vol. 54, pp. 129–139, 2020.</li>
           <li><u>Bowen Yi</u>, Slobodan N. Vukosavic, Romeo Ortega, Aleksandar M. Stankovic and Weidong Zhang, A new signal injection-based method for estimation of position in salient permanent magnet synchronous motors, <em>IET Power Electron.</em>, vol. 13(9), pp. 1865–1874, 2020.</li>
+          <li>Lei Wang, Romeo Ortega, Alexey Bobtsov, Jose G. Romero and <u>Bowen Yi</u> Identiability implies robust, globally exponentially convergent on-line parameter estimation, <em>Int J. Control</em>, accepted, 2023.</li>
           <li>Jin Wu, Miaomiao Wang, Yi Jiang, <u>Bowen Yi</u>, Rui Fan and Ming Liu, Simultaneous Hand-Eye/Robot-World/Camera-IMU Calibration, <em>IEEE/AMSE Trans. Mechatron.</em>, 2021. (online)</li>
           <li>Alexey Bobtsov, Romeo Ortega, <u>Bowen Yi</u>, and Nicolay Nicolaev, Adaptive state estimation of stateaffine systems with unknown time-varying parameters, <em>Int. J. Control</em>, 2021. (online)</li>
           <li>Lei Qiao, <u>Bowen Yi</u>, Defeng Wu and Weidong Zhang, Design of three exponentially convergent robust controllers for the trajectory tracking of autonomous underwater vehicles, <em>Ocean Eng.</em>, vol. 134, pp. 157–172, 2017.</li>
