--- a/publication.html
+++ b/publication.html
@@ -151,7 +151,7 @@ Ultimo, NSW 2007</p>
         <ol>
           <li><u>Bowen Yi</u>, Lei Wang and Ian R. Manchester, Attitude estimation from vector measurements: Necessary and sufficient conditions and convergent observer design, <em>IEEE Trans. Autom. Control</em>, 2023. (accepted)</li>
           <li>Romeo Ortega, Laurent Praly, Stanislav Aranovskiy, <u>Bowen Yi</u> and Weidong Zhang, On dynamic regressor extension and mixing parameter estimators: Two Luenberger observers interpretations,<em> Automatica</em>, vol. 95, pp. 348–351, 2018. </li>
-          <li><u>Bowen Yi</u>, and Ian R. Manchester, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, <em>IEEE Trans. Autom. Control</em>, 2022. (conditionally accepted, <a href="https://arxiv.org/abs/2103.15033">arXiv: 2103.15033</a>)</li>
+          <li><u>Bowen Yi</u>, and Ian R. Manchester, On the equivalence of contraction and Koopman approaches for nonlinear stability and control, <em>IEEE Trans. Autom. Control</em>, 2023. (accepted)</li>
           <li><u>Bowen Yi</u>, Ruigang Wang and Ian R. Manchester, Reduced-order nonlinear observers via contraction analysis and convex optimization,  <em>IEEE Trans. Autom. Control</em>, pp. 4045-4060, vol. 67, issue 8, August 2022.</li>
           <li>Romeo Ortega, <u>Bowen Yi</u>*, Slobodan N. Vukosavic, Kwanghee Nam and Jongwon Choi, A globally exponentially stable position observer for interior permanent magnet synchronous motors, <em>Automatica</em>, vol. 125, 109424, pp. 1-10, 2021.</li>
           <li><u>Bowen Yi</u>, Romeo Ortega and Weidong Zhang, On state observers for nonlinear systems: A new design and a unifying framework, <em>IEEE Trans. Autom. Control</em>, vol. 64, pp. 1193-1120, 2019.</li>
